# cbn_complex_networks

./: .gitignore  .gitmodules  HYBRID_INTEGRATION.md  README.md  exp8_hybrid_results.csv
cbn_cpp/: CMakeLists.txt  benchmark_results.csv  campaign_config_linear.json
cbn_cpp/examples/: campaign_exemplo.json  campaign_results.csv  campaign_runner.cpp  experiment_runner.cpp  run_pipeline.cpp  scientific_benchmarking.cpp  test_topology_cycle_AND_2.json  test_topology_cycle_CONST0_4.json  test_topology_cycle_OR_6_INCORRECT.json  test_topology_cycle_THRESHOLD2_10.json  test_topology_cycle_XOR_8_INCORRECT.json  test_topology_mixed_OR_11.json.json  test_topology_path_AND_7.json  test_topology_path_CONST0_9.json  test_topology_path_OR_1.json  test_topology_path_THRESHOLD2_5.json  test_topology_path_XOR_3.json  verify_cbn.cpp
cbn_cpp/include/cbnetwork/: campaign_manager.hpp  cbnetwork.hpp  coupling.hpp  customtext.hpp  directededge.hpp  globalnetwork.hpp  globalscene.hpp  globaltopology.hpp  localnetwork.hpp  network_factory.hpp  path_utils.hpp
cbn_cpp/phd_experiments/output_data/: cbn_sample_1_fields.json  cbn_sample_2_fields.json  cbn_sample_2_topology.csv  cbn_sample_3_fields.json
cbn_cpp/src/: campaign_manager.cpp  cbnetwork.cpp  directededge.cpp  experiment_strategies.cpp  globaltopology.cpp  localnetwork.cpp  localscene.cpp  network_factory.cpp
data_experiments/wsl_ubuntu/test_11_nodos_aleatory_fixed/: test_11_nodos_aleatory_fixed_network.json  (+1 more)
examples/: exp8_data_hybrid.py  hybrid_execution_example.py
python/: cbn_engine_utils.py
(+5 files in other folders)
